# hit-astocker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-phase3-data-backfill.md
docs/superpowers/specs/: 2026-03-12-strategy-optimization-design.md
scripts/: backfill_daily_bar.py
src/hit_astocker/: main.py
src/hit_astocker/analyzers/: backtest_diagnosis.py  backtest_engine.py  board_survival.py  dragon_tiger.py  event_classifier.py  firstboard.py  flow_factors.py  lianban.py  market_context.py  moneyflow.py  predictor.py  profit_effect.py  sector_rotation.py  sentiment.py  sentiment_cycle.py  signal_validator.py  stock_sentiment.py  technical_form.py
src/hit_astocker/commands/: backtest_cmd.py  backtest_diag_cmd.py  daily_cmd.py  dragon_cmd.py  event_cmd.py  firstboard_cmd.py  flow_cmd.py  lianban_cmd.py  predict_cmd.py  sector_cmd.py  sentiment_cmd.py  signal_cmd.py  sync_cmd.py  train_cmd.py
src/hit_astocker/config/: constants.py  settings.py
src/hit_astocker/database/: connection.py  migrations.py  schema.py
src/hit_astocker/fetchers/: ann_fetcher.py  auction_fetcher.py  concept_fetcher.py  daily_bar_fetcher.py  dragon_fetcher.py  fetcher_base.py  hm_fetcher.py  hsgt_fetcher.py  index_fetcher.py  kpl_fetcher.py  limit_fetcher.py  moneyflow_detail_fetcher.py  moneyflow_fetcher.py  rate_limiter.py  sector_fetcher.py  step_fetcher.py  stk_factor_fetcher.py  sync_orchestrator.py  ths_hot_fetcher.py  ths_member_fetcher.py  trade_cal_fetcher.py  (+1 more)
tests/: conftest.py
tests/unit/: test_backtest_config_regime.py
(+83 files in other folders)
